# gdb-mcp

./: INSTALL.md  README.md  TOOLS.md  pyproject.toml
.github/workflows/: test.yml
deploy/: MANUAL_INSTALL.md  REMOTE_COREDUMP_DEPLOY.md  REMOTE_DEBUG_GUIDE.md  config.env  setup_remote.sh  test_deployment.sh
examples/: README.md
src/gdb_mcp/: __init__.py  gdb_interface.py  mi_parser.py  process_controller.py  server.py
tests/: README.md  test_gdb_integration.py  test_gdb_interface.py  test_process_controller.py  test_server.py  test_session_routing.py
