[project]
name = "gdb-mcp-server"
version = "0.2.1"
description = "MCP server for interacting with GDB debugging sessions (local and SSH remote)"
authors = [{name = "Andrew Stelter"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
gdb-mcp-server = "gdb_mcp.server:run_server"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
